add gdpr comment to platforms

--- a/index.html
+++ b/index.html
@@ -490,7 +490,9 @@ Platforms you could use to share MRI data publicly include:
 &lt;footer&gt;
 [[About this guide-&gt;About]]
 &lt;/footer&gt;</tw-passagedata><tw-passagedata pid="13" name=" Platform overview" tags="" position="739,1461" size="100,100">(enchant: ?page, (text-colour: black) + (background: white))
-On this page, you can find an overview of some of the most common platforms that are currently available for Dutch researchers to share neuroimaging data.
+On this page, you can find an overview of some of the most common platforms that are currently available for Dutch researchers to share neuroimaging data. If there is no suitable solution in this overview, try searching for one here: https://www.re3data.org/
+
+Please note that storage of personal data within the EU is needed to comply with the GDPR.
 
 **Quick jump to**:
 - &lt;a href=&quot;#internationalservices&quot;&gt;International services&lt;/a&gt;
